Revision history for Net::DNS                                     -*-text-*-
=============================

*** 0.55_01 Unreleased

Feature Implemented SPF (typecode 99).

   The class completely inherits from Net::DNS::RR::TXT (the easiest 
   RR to implement ever).

Feature added rrsort() function.
   Feature was requested by Eric Hall in rt.cpan.org 13392

   This was a little tricky as I think that the sort functions are in
   fact RR specific class attributes that should be accessed through
   class methods. This is difficult to implement. I do think I found a
   fairly clean manner. It does require a global variable in Net::DNS
   to store the functions and some trickery when the sorting functions
   are defined.

   See Net::DNS and Net::DNS::RR documentation for details.

   Defaults sorting functions are currently implemented in 
      SRV: default sort: low prioirity to high priority and for
           same preference highest weight first.
	   weight: sort all RRs based on weight, highest first
	   priority: see default sort

      MX:  default sort: lowest preference first.
           preference: see default sort    
           
    NAPTR: default sort: lowest to highest order, for same order lowest
           preference first
	   order: see default sort
	   preference: order on preference, lowest first

      PX:  See MX
      RT:  See MX


Fix rt.cpan.org 14653 and 14049 
   TCP fallback after V6 socket failure 

   Reworked Net::DNS::Base::Nameserver::send_tcp() to fallback to IPv4 when 
   possible. (change applied to SVN Revision 538).


Feature Cleanup duplicated code

   axfr_send() and send_tcp() contained some duplicated code. I merged
   this in one "helper" method _create_tcp_socket()



Fix AXFR persistent sockets coliding with query sockets.

   I think that using the same persistent sockets for AXFR and
   'ordinary' queries could lead to race conditions. Better safe than
   sorry. For axfrs we create a different set of persitent sockets.
